--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "build": "vite build",
     "serve": "vite preview"
   },
+  "engines": {
+    "node": "22.14.x"
+  },
   "devDependencies": {
     "vite": "^6.2.6"
   }
