--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.24.0",
+    "@tailwindcss/vite": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^8.29.1",
     "@typescript-eslint/parser": "^8.29.1",
     "eslint": "^9.24.0",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-prettier": "^5.2.6",
     "prettier": "^3.5.3",
+    "tailwindcss": "^4.1.3",
     "typescript": "^5.8.3",
     "vite": "^6.2.6"
   }
